# SyntheticQuantEngine

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: backtesting.md  journal.md  live_mt5.md
notebooks/: vol25_exploration.ipynb
src/synthetic_quant_engine/: __init__.py  cli.py  settings.py
src/synthetic_quant_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synthetic_quant_engine/backtest/: __init__.py  event.py
src/synthetic_quant_engine/live/: __init__.py
src/synthetic_quant_engine/live/mt5/: __init__.py  cli.py  executors.py  logger.py  runner.py  session.py  settings.py  signals.py
tests/: test_backtester.py  test_data_fetch.py
