[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-quant-engine"
version = "0.1.0"
description = "Full-stack data and strategy engine for synthetic indices."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "1cbyc" }
]
dependencies = [
  "pandas>=2.2.2",
  "deriv-api>=1.0.5",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "ruff>=0.6.9"
]

[tool.setuptools.packages.find]
where = ["src"]


